tests/paczka1/small_fuzzy/85287393.err
Error in line 3: vOQwy S78 59,8
Error in line 12: wFPN S78 15,87
Error in line 7: Xmerk S365 772,0
